                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Added an substantial portion of re module

 * Added --operator-funcs to enable non-number operation such as [1]+[2]

 * Added --inline-code to speedup eq/bool/len (saves expensive function calls)

 * All attributes are accessed as v['attr'] and not as v.attr anymore
   This circumvents a bug in IE with javascript keywords:
     (v.super is not allowed, but v['super'] is)

 * Added __cmp__ to dict class

 * Make compile options effective in runtime options

 * Added --keep-lib-files option

 * Added --dynamic option

 * Added dynamic loading of modules

 * Added builtin __import__ (only supports the first parameter)

 * make public subdirectory configurable at build time (thanks to Mathias Waack)

 * Add rfind to string (and tests)

 * Added new "Handler" classes MouseHandler, ClickHandler, KeyboardHandler
   and FocusHandler, which need only be "mixed in" to a Widget in order
   to get event handling.

 * fixed floating point precision in sprintf, now '%.2f' works

 * Added basic implemention of new style decorators and 2.6 style property()

 * Added first port of GChart - http://code.google.com/p/gchart.
   java2py.py converted, then manual update.  Passes syntax check
   but that's about it...

 * Added property()

 * Added staticmethod()

 * Added __pyjamas__.setCompilerOptions()

 * Added descriptors (enables old style decorators)

 * Added del cls.attr

 * More checks in list methods

 * Javascript keywords are possible/allowed as attibutes/modules

 * All builtins can be overridden

 * Added support for *args/**kwargs for lambda

 * Added support mutable default in functions

 * Added keyword args to list.sort (thanks to Beni Cherniavsky)

 * Fixed toggle example and button handling #236

                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------
