@@ -29,6 +29,7 @@ Radoslav Kirov
 Beni Kerniavsky
 Henk Punt
 Mathias Waack - <Mathias.Waack@rantzau.de>
+Guenter Walser - <guenter.walser@wanagu.at>
 
 
 Erik gets a special mention for the contribution of the "Showcase".
